Feature: Added documentation, yarn file

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "programming",
+  "name": "monty-hall-problem",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": "https://github.com/carl-eis/monty-hall-problem",
   "author": "",
   "license": "ISC",
   "dependencies": {
