Chore: Updated package.json

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "monty-hall-problem",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "monty.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
